--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=test jest --verbose --forceExit --runInBand",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
